2007.03.12: David Nichols
	* updated Counter class to throw exceptions on thread errors (deleted
	  while waiting threads, etc)
	* added Condition::wait_count() method
	* added Counter::getWaiting() method

2007.03.10: David Nichols
	* updated Datasource class to throw an exception if deleted by another
	  thread while in a transaction (and release the lock)
	* updated documentation to reflect that Datasource transaction timeouts
	  are now set in milliseconds instead of seconds
	* added "AutoReadLock" and "AutoWriteLock" classes for exception-safe 
	  RWLock handling
	* updated Datasource and QoreEncoding to use std::string to store 
	  strings
	* made QoreEncoding members private
	* applied "const char*" to headers where appropriate
	* updated QoreClass; sanitized constructors and name handling
	* updated QoreString::getBuffer() to return const char *

2007.03.09: David Nichols
	* renamed SafeLocker class to "AutoLock"
	* updated AutoLock to release the lock in the destructor only if the
	  lock is held (use the lock's status and not track it in the AutoLock
	  object in case the lock is released due to an exception, etc)
	* added AutoGate class for exception-safe gate lock handling
	* updated SmartMutex class to allow for tracking condition variables
	  waiting on it so that if it's deleted while a condition variable is
	  waiting, an exception can be thrown in the other thread(s)
	* updated RWLock class to take advantage of the new deadlock detection
	  infrastructure

2007.03.08: David Nichols
	* added RAW and LONG RAW handling to oracle driver
	* changed the Gate class to no longer accept a code to enter the gate
	* applied new deadlock detection and thread-error-catching 
	  infrastructure to the Gate class (VRmutex implementation)
	* updated documentation
	* deprecated the RMutex class in favor of the Gate class

2007.03.07: David Nichols
	* changed conversion of mysql decimal type to string from int to avoid a