@@ -3,6 +3,8 @@
 	  while waiting threads, etc)
 	* added Condition::wait_count() method
 	* added Counter::getWaiting() method
+	* Mutex::destructor() throws an exception if destroyed while condition
+	  variables waiting on it
 
 2007.03.10: David Nichols
 	* updated Datasource class to throw an exception if deleted by another
